add requests model, controller, change getToken function,  revert secur
